[package]
name = "brainfuckc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "brainfuckc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/stdlib"]


[dependencies]
anyhow = "1.0.82"
itertools = "0.12.1"
llvm = { git = "https://github.com/HSMF/llvm-defs-rs.git" }
